--- a/1PF-Vazquez/src/app/components/tool-bar/tool-bar.component.css
+++ b/1PF-Vazquez/src/app/components/tool-bar/tool-bar.component.css
@@ -1,3 +1,12 @@
-.title{
-    background-color: ;
+.toolbar{
+    background-color: #457387;
+
+}
+
+span{
+    padding-left: 50px;
+}
+
+.btn{
+    margin-left: 1000px;
 }
