--- a/1PF-Vazquez/src/app/components/students/students.component.html
+++ b/1PF-Vazquez/src/app/components/students/students.component.html
@@ -1,55 +1,47 @@
-<div class="table"  >
-    
-<table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
-    <!-- Columna Nombre -->
-    <ng-container matColumnDef="nombre">
-        <th  mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td  mat-cell *matCellDef="let element">{{ element.nombre }}</td>
-    </ng-container>
+<div class="tabla">
+    <table mat-table class="mat-elevation-z8 mat-table" [dataSource]="dataSource">
+        <!-- Columna Nombre -->
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>Nombre</th>
+            <td mat-cell *matCellDef="let element">{{ element | pipePersonalizado}}</td>
+        </ng-container>
 
-    <!-- Columna apellido -->
-    <ng-container   matColumnDef="apellido">
-        <th mat-header-cell *matHeaderCellDef>Apellido</th>
-        <td mat-cell *matCellDef="let element">{{ element.apellido }}</td>
-    </ng-container>
+        <!-- Columna curso -->
+        <ng-container matColumnDef="curso">
+            <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>Curso</th>
+            <td mat-cell *matCellDef="let element">{{ element.curso }}</td>
+        </ng-container>
 
-    <!-- Columna curso -->
-    <ng-container  matColumnDef="curso">
-        <th mat-header-cell *matHeaderCellDef>Curso</th>
-        <td  mat-cell *matCellDef="let element">{{ element.curso }}</td>
-    </ng-container>
+        <!-- Columna Numero de Estudiantes -->
+        <ng-container matColumnDef="cedula">
+            <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>cedula</th>
+            <td mat-cell *matCellDef="let element">{{ element.cedula }}</td>
+        </ng-container>
 
-    <!-- Columna Numero de Estudiantes -->
-    <ng-container  matColumnDef="salon">
-        <th  mat-header-cell *matHeaderCellDef>Salon</th>
-        <td  mat-cell *matCellDef="let element">{{ element.salon }}</td>
-    </ng-container>
+        <!-- Columna Acciones -->
+        <ng-container matColumnDef="editar">
+            <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>Editar</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button (click)="editar(element)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="eliminar">
+            <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>Eliminar</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button (click)="eliminar(element)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
 
-    <!-- Columna Acciones -->
-    <ng-container  matColumnDef="editar">
-        <th mat-header-cell *matHeaderCellDef>Editar</th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button>
-                <mat-icon>edit</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-    <ng-container  matColumnDef="eliminar">
-        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button >
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-
-        
-    <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
-</table>
-<div class="agregar">
-    <span>Agregar</span>
-        <button mat-icon-button>
+        <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+    </table>
+    <div class="boton">
+        <button class="btn btn-outline-dark" (click)="agregar()">
+            <span>Agregar</span>
             <mat-icon>add</mat-icon>
         </button>
     </div>
