--- a/2PF-Vazquez/src/app/toolbar/components/toolbar.component.html
+++ b/2PF-Vazquez/src/app/toolbar/components/toolbar.component.html
@@ -4,9 +4,9 @@
         <mat-icon>menu</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item routerLink="/Alumnos" >Alumnos</button>
-        <button mat-menu-item>Institucion</button>
-        <button mat-menu-item>Contacto</button>
+        <button mat-menu-item routerLink="/Cursos" >Cursos</button>
+        <button mat-menu-item routerLink="/Estudiantes">Estudiantes</button>
+        <button mat-menu-item>Inscripción</button>
       </mat-menu>
       <span appDirectivaPersonalizada>Alumnos Inscriptos</span>
       <button mat-icon-button class="btn btn-outline-dark">
