--- a/2PF-Vazquez/src/app/app.component.html
+++ b/2PF-Vazquez/src/app/app.component.html
@@ -1,4 +1,6 @@
-
-    <app-tool-bar></app-tool-bar>
-
+<div class="grid-container">
+    <app-tool-bar class="grid-header"></app-tool-bar>
+    
+</div>
+    <p class="principal">Pagina Principal</p>
 <router-outlet></router-outlet>
