--- a/2PF-Vazquez/src/app/cursos/components/agregar-dialog/agregar-dialog/agregar-dialog.component.html
+++ b/2PF-Vazquez/src/app/cursos/components/agregar-dialog/agregar-dialog/agregar-dialog.component.html
@@ -3,23 +3,18 @@
     <form [formGroup]="formulario">
         <!-- Campo Nombre -->
         <mat-form-field appearance="fill">
-            <mat-label>Nombre</mat-label>
-            <input formControlName="nombre" matInput>
+            <mat-label>id</mat-label>
+            <input formControlName="id" matInput>
         </mat-form-field>
         <!-- Campo Apellido -->
-        <mat-form-field appearance="fill">
-            <mat-label>Apellido</mat-label>
-            <input formControlName="apellido" matInput>
-        </mat-form-field>
-        <!-- Campo Curso -->
         <mat-form-field appearance="fill">
             <mat-label>Curso</mat-label>
             <input formControlName="curso" matInput>
         </mat-form-field>
-        <!-- Campo cedula -->
+        <!-- Campo Curso -->
         <mat-form-field appearance="fill">
-            <mat-label>cedula</mat-label>
-            <input formControlName="cedula" matInput>
+            <mat-label>Salon</mat-label>
+            <input formControlName="salon" matInput>
         </mat-form-field>
     </form>
 </div>
