--- a/2PF-Vazquez/src/app/estudiantes/components/estudiantes/agregar-dialog/agregar-dialog.component.html
+++ b/2PF-Vazquez/src/app/estudiantes/components/estudiantes/agregar-dialog/agregar-dialog.component.html
@@ -1,24 +1,29 @@
-<h1 mat-dialog-title>Editar Informacion</h1>
+<h1 mat-dialog-title>Agregar Informacion</h1>
 <div mat-dialog-content>
     <form [formGroup]="formulario">
         <!-- Campo Nombre -->
         <mat-form-field appearance="fill">
-            <mat-label>id</mat-label>
-            <input formControlName="id" matInput>
+            <mat-label>Nombre</mat-label>
+            <input formControlName="nombre" matInput>
         </mat-form-field>
         <!-- Campo Apellido -->
+        <mat-form-field appearance="fill">
+            <mat-label>Apellido</mat-label>
+            <input formControlName="apellido" matInput>
+        </mat-form-field>
+        <!-- Campo Curso -->
         <mat-form-field appearance="fill">
             <mat-label>Curso</mat-label>
             <input formControlName="curso" matInput>
         </mat-form-field>
-        <!-- Campo Curso -->
+        <!-- Campo cedula -->
         <mat-form-field appearance="fill">
-            <mat-label>Salon</mat-label>
-            <input formControlName="salon" matInput>
+            <mat-label>cedula</mat-label>
+            <input formControlName="cedula" matInput>
         </mat-form-field>
     </form>
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="cerrar()">Cerrar</button>
-    <button mat-button (click)="actualizar()">Actualizar</button>
+    <button mat-button (click)="agregar()">Agregar</button>
 </div>
