--- a/2PF-Vazquez/src/app/cursos/components/students/students/students.component.html
+++ b/2PF-Vazquez/src/app/cursos/components/students/students/students.component.html
@@ -2,7 +2,7 @@
     <table mat-table class="mat-elevation-z8 mat-table" [dataSource]="dataSource">
         <!-- Columna Nombre -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>id</th>
+            <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>Id</th>
             <td mat-cell *matCellDef="let element">{{ element.id}}</td>
         </ng-container>
 
@@ -30,7 +30,7 @@
         <ng-container matColumnDef="eliminar">
             <th mat-header-cell *matHeaderCellDef appDirectivaPersonalizada>Eliminar</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button (click)="eliminar(element)">
+                <button mat-icon-button (click)="eliminar(element.id)">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
