--- a/2PF-Vazquez/src/app/app.component.html
+++ b/2PF-Vazquez/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="grid-container">
     <app-tool-bar class="grid-header"></app-tool-bar>
+    {{ sesion$ | async | json }}
 </div>
 <router-outlet></router-outlet>
