--- a/2PF-Vazquez/src/app/toolbar/components/toolbar.component.html
+++ b/2PF-Vazquez/src/app/toolbar/components/toolbar.component.html
@@ -1,12 +1,12 @@
-<mat-toolbar class="toolbar">
+<mat-toolbar class="toolbar" *ngIf="(sesionActiva$|async)">
     <mat-toolbar-row>
       <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>menu</mat-icon>
       </button>
-      <mat-menu #menu="matMenu">
+      <mat-menu #menu="matMenu" >
         <button mat-menu-item routerLink="/Cursos" >Cursos</button>
-        <button mat-menu-item routerLink="/Estudiantes">Estudiantes</button>
-        <button mat-menu-item>Inscripción</button>
+        <button mat-menu-item routerLink="/Estudiantes" *ngIf="(usuarioAdmin$ | async)">Estudiantes</button>
+        <button mat-button (click)="cerrarSesion()">Cerrar Sesion</button>
       </mat-menu>
       <span appDirectivaPersonalizada>Alumnos Inscriptos</span>
       <button mat-icon-button class="btn btn-outline-dark">
